[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Blaster/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Player/Blaster/bullet.png" type="Texture" id=2]
[ext_resource path="res://Player/Blaster/Bullet_Sprite.gd" type="Script" id=3]
[ext_resource path="res://Player/Blaster/Audio/fire3.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Blaster/Audio/hit7.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 18.1687

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Bullet_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet_Area"]
shape = SubResource( 1 )

[node name="Fire_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Hit_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
mix_target = 2

[connection signal="area_entered" from="Bullet_Area" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Bullet_Area" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="Hit_SFX" to="." method="_on_Hit_SFX_finished"]
